tests/expectations/compiler/const_generics/unreachable.out
Error [ECMP0376012]: Unable to resolve call to generic function `def`. A non-const expression `C` was provided where a const generic parameter is required.
    --> compiler-test:16:16
     |
  16 |         return def::[C]();
     |                ^^^^^^^^^^
